Our Team image area reformulated, image hover modified, add info to the hover effect

--- a/home.html
+++ b/home.html
@@ -121,18 +121,114 @@
                 </div>
                 <div class="projects-images-container">
                     <div class="projects-images-container container">
-                        <div><img src="media/foto1.jpg" alt="foto 1"></div>
-                        <div><img src="media/foto2.jpg" alt="foto 2"></div>
-                        <div><img src="media/foto3.jpg" alt="foto 3"></div>
-                        <div><img src="media/foto4.jpg" alt="foto 4"></div>
-                        <div><img src="media/foto5.jpg" alt="foto 5"></div>
-                        <div><img src="media/foto6.jpg" alt="foto 6"></div>
-                        <div><img src="media/foto7.jpg" alt="foto 7"></div>
-                        <div><img src="media/foto8.jpg" alt="foto 8"></div>
-                        <div><img src="media/foto9.jpg" alt="foto 9"></div>
-                        <div><img src="media/foto1.jpg" alt="foto 10"></div>
-                        <div><img src="media/foto2.jpg" alt="foto 11"></div>
-                        <div><img src="media/foto3.jpg" alt="foto 12"></div>
+                        <div class="projects-images">
+                            <div class="projects-images-area">
+                                <div class="projects-images--info">
+                                    <h3>About</h3>
+                                    <p>Praesent metus urna, feugiat a placerat elementum at leo</p>
+                                </div>
+                                <img src="media/foto1.jpg" alt="foto 1">
+                            </div>
+                        </div>
+                        <div class="projects-images">
+                            <div class="projects-images-area">
+                                <div class="projects-images--info">
+                                    <h3>About</h3>
+                                    <p>Praesent metus urna, feugiat a placerat elementum at leo</p>
+                                </div>
+                                <img src="media/foto2.jpg" alt="foto 2">
+                            </div>
+                        </div>
+                        <div class="projects-images">
+                            <div class="projects-images-area">
+                                <div class="projects-images--info">
+                                    <h3>About</h3>
+                                    <p>Praesent metus urna, feugiat a placerat elementum at leo</p>
+                                </div>
+                                <img src="media/foto3.jpg" alt="foto 3">
+                            </div>
+                        </div>
+                        <div class="projects-images">
+                            <div class="projects-images-area">
+                                <div class="projects-images--info">
+                                    <h3>About</h3>
+                                    <p>Praesent metus urna, feugiat a placerat elementum at leo</p>
+                                </div>
+                                <img src="media/foto4.jpg" alt="foto 4">
+                            </div>
+                        </div>
+                        <div class="projects-images">
+                            <div class="projects-images-area">
+                                <div class="projects-images--info">
+                                    <h3>About</h3>
+                                    <p>Praesent metus urna, feugiat a placerat elementum at leo</p>
+                                </div>
+                                <img src="media/foto5.jpg" alt="foto 5">
+                            </div>
+                        </div>
+                        <div class="projects-images">
+                            <div class="projects-images-area">
+                                <div class="projects-images--info">
+                                    <h3>About</h3>
+                                    <p>Praesent metus urna, feugiat a placerat elementum at leo</p>
+                                </div>
+                                <img src="media/foto6.jpg" alt="foto 6">
+                            </div>
+                        </div>
+                        <div class="projects-images">
+                            <div class="projects-images-area">
+                                <div class="projects-images--info">
+                                    <h3>About</h3>
+                                    <p>Praesent metus urna, feugiat a placerat elementum at leo</p>
+                                </div>
+                                <img src="media/foto7.jpg" alt="foto 7">
+                            </div>
+                        </div>
+                        <div class="projects-images">
+                            <div class="projects-images-area">
+                                <div class="projects-images--info">
+                                    <h3>About</h3>
+                                    <p>Praesent metus urna, feugiat a placerat elementum at leo</p>
+                                </div>
+                                <img src="media/foto8.jpg" alt="foto 8">
+                            </div>
+                        </div>
+                        <div class="projects-images">
+                            <div class="projects-images-area">
+                                <div class="projects-images--info">
+                                    <h3>About</h3>
+                                    <p>Praesent metus urna, feugiat a placerat elementum at leo</p>
+                                </div>
+                                <img src="media/foto9.jpg" alt="foto 9">
+                            </div>
+                        </div>
+                        <div class="projects-images">
+                            <div class="projects-images-area">
+                                <div class="projects-images--info">
+                                    <h3>About</h3>
+                                    <p>Praesent metus urna, feugiat a placerat elementum at leo</p>
+                                </div>
+                                <img src="media/foto1.jpg" alt="foto 1">
+                            </div>
+                        </div>
+                        <div class="projects-images">
+                            <div class="projects-images-area">
+                                <div class="projects-images--info">
+                                    <h3>About</h3>
+                                    <p>Praesent metus urna, feugiat a placerat elementum at leo</p>
+                                </div>
+                                <img src="media/foto2.jpg" alt="foto 2">
+                            </div>
+                        </div>
+                        <div class="projects-images">
+                            <div class="projects-images-area">
+                                <div class="projects-images--info">
+                                    <h3>About</h3>
+                                    <p>Praesent metus urna, feugiat a placerat elementum at leo</p>
+                                </div>
+                                <img src="media/foto3.jpg" alt="foto 3">
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <a class="btn-project button" href="">More Projects</a>
