--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
 			<div class="section-desc">Our Co-Workers</div>
 			<div class="section-body container">
 				<div class="our-team">
+					<!-- FIRST SLIDER -->
 					<div class="sliders">
 						<div class="slide">
 							<div class="slidearea">
@@ -300,22 +301,6 @@
 								</div>
 							</div>
 						</div>
-						<div class="slide">
-							<div class="slidearea">
-								<img class="our-team--avatar" src="media/mulher1.png">
-								<div class="our-team--name">Jane Doe</div>
-								<div class="our-team--role">Master mind</div>
-								<div class="our-team--social">
-									<a href=""><img src="assets/images/facebook.png"></a>
-									<a href=""><img src="assets/images/googleplus.png"></a>
-									<a href=""><img src="assets/images/linkedin.png"></a>
-									<a href=""><img src="assets/images/localizacao.png"></a>
-									<a href=""><img src="assets/images/pinterest.png"></a>
-									<a href=""><img src="assets/images/telefone.png"></a>
-									<a href=""><img src="assets/images/twitter.png"></a>
-								</div>
-							</div>
-						</div>
 					</div>
 					<div class="sliders-pointers">
 						<div class="pointer active"></div>
@@ -323,7 +308,6 @@
 						<div class="pointer"></div>
 					</div>
 				</div>
-			</div>
 			</div>
 		</section>
 
